# windows-service

./: CMakeLists.txt  README.md  install_service.bat  test_service.cpp  uninstall_service.bat
